--- a/suggestion_box/index.html
+++ b/suggestion_box/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Suggestion Box</title>
 
+    <link rel="stylesheet" type="text/css" href="css/styles.css" media="screen" />
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/
 css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -27,6 +28,7 @@ css/bootstrap.min.css" rel="stylesheet">
 
     <script src="js/controllers/HomeController.js" type="text/javascript"></script>
     <script src="js/controllers/SuggestionController.js" type="text/javascript"></script>
+    <script src="js/controllers/LoginController.js" type="text/javascript"></script>
 
     <!--- Services -->
     <script src="js/services/suggestions.js" type="text/javascript"></script>
